--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,7 @@
 .attribution a { color: hsl(228, 45%, 44%); }
 
 
-.div-main{
+main{
     display: flex;
     height: 100vh;
     justify-content: center;
@@ -11,7 +11,7 @@
 
 }
 
-.div-principal{
+section{
     display: flex;
     height: 450px;
     width: 300px;
@@ -23,18 +23,18 @@
     text-align: center;
 }
 
-.div-principal figure{
+section figure{
     width: fit-content;
 }
 
-.div-principal figure img{
+section figure img{
     border-radius: 2%;
     width: 300px;
     height: 300px;
     margin-bottom: 10px;
 }
 
-.div-principal h1{
+section h1{
     color: #1F3251;
     font-family: 'Outfit';
     font-weight: 700;
@@ -42,7 +42,7 @@
     margin: 15px 30px 20px 15px;
 }
 
-.div-principal p{
+section p{
     color:  #7B879D;
     font-family: 'Outfit';
     font-weight: 400;
